--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .view {
-  background: url("/css/dwiipaint.webp") no-repeat center center;
+  background: url("https://dwii.me/css/dwiipaint.webp") no-repeat center center;
   background-color: #2e2e2e;
   background-size: cover;
 }
