--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -87,3 +87,20 @@ border-radius: 10px;
 background-color: rgba(255, 255, 255, 0.1);
 border-radius: 0 !important;
 }
+
+.btt {
+  display: inline-block;
+  text-align: center;
+  border-radius: 4px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+}
+
+.btt.show {
+  opacity: 1;
+  visibility: visible;
+}
